<resources>
    <string name="app_name">Кето! Всё о Кето диете от investlifestyle</string>
    <string name="title_home">Главная</string>
    <string name="title_dashboard">Темы</string>
    <string name="title_notifications">Кабинет</string>
    <string name="title_chose">Выбор тем</string>
    <string name="title_none"> </string>
    <string name="hello_text">Добрый день!</string>
    <string name="hello_subtext">Хороший день, что бы начать - это сегодня.</string>
    <string name="placeholder_article">Статья с очень интересной темой для вас в которой что то написано</string>
    <string name="choseCategory"><u>Выбрать категории</u></string>
    <string name="choseCategoryTitle">Выбрать категории</string>
    <string name="health">Здоровье</string>
    <string name="keto_courses">Кето курс</string>
    <string name="nutrition">Питание</string>
    <string name="evolution">Развитие</string>
    <string name="tags_keto">Кето</string>
    <string name="tags_education">Обучение</string>
    <string name="tags_useful">Полезное</string>
    <string name="tags_recipes">Рецепты</string>
    <string name="tags_like_posts">Сохранённое</string>
    <string name="see_all">Смотреть всё</string>
    <string name="name">Имя</string>
    <string name="button_save_name">Сохранить</string>
    <string name="clue_name">Имя сохранятеся только в вашем телефоне.</string>
    <string name="save_theme">Сохраненные статьи</string>
</resources>