<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.investlifestyle.app.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ru.investlifestyle.app.ui.subject.SubjectTopicsFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_subject_topics" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ru.investlifestyle.app.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <activity
        android:id="@+id/postActivity2"
        android:name="ru.investlifestyle.app.ui.post.PostActivity"
        android:label="activity_post"
        tools:layout="@layout/activity_post" />
    <fragment
        android:id="@+id/choiceFragment"
        android:name="ru.investlifestyle.app.ui.choice.ChoiceFragment"
        android:label="fragment_choise"
        tools:layout="@layout/fragment_choise" />
</navigation>