<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/material_margin_small"
    tools:context=".ui.notifications.NotificationsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ed_t_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:text="@string/name" />

        <Button
            android:id="@+id/btn_save_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save_name" />
    </LinearLayout>

        <TextView
            android:id="@+id/tv_clue_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clue_name"
            android:layout_marginTop="@dimen/material_margin_super_small"
            android:textColor="@color/textHeaderColor"
            android:textSize="14sp"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/material_margin_standard"

        android:layout_marginStart="@dimen/material_margin_normal"
        android:text="@string/save_theme"
        android:textColor="#172368"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/material_margin_small"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_home_article"/>


</androidx.appcompat.widget.LinearLayoutCompat>
